# PDF-Parsing

./: .env.example  .flake8  .gitignore  .readthedocs.yaml  CLAUDE.md  PROJECT_CONTEXT.md  README.md  UI_README.md  VERIFICATION_UI_IMPLEMENTATION_PLAN.md  cli_profile.py  docling-overview.md  generate_test_fixtures.py  kv_extraction_implementation_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_app.py  shutdown_app.py  testing_tesserocr.py
.hypothesis/constants/: 23841db671bce7f9  7669ede3c755e083  7cb2496568a5b864  ab8e2677a2db6619  c5626cba73084d2a  d60c34f61f5c5f85  da39a3ee5e6b4b0d  f925eb184d4974c7  fe859a37824e90a8
.streamlit/: config.toml
claude-workflow/: README_FOR_CLAUDE.md
claude-workflow/steps/: 00-INDEX.md  01-test-strategy.md  02-test-environment-setup.md  03-test-fixtures-pdfs.md  04-unit-tests-parser.md  05-unit-tests-search.md  06-unit-tests-verification.md  07-property-perf-tests.md  08-ci-setup.md  09-project-scaffold.md  10-implementation-roadmap.md
docs/: conf.py  development-howto-guides.md  getting-started.md  index.md  index.rst  installation-troubleshooting.md  installation-tutorial.md  system-architecture.md  usage-howto-guides.md
docs/design/: field-extraction.md
docs/development/: code-quality.md  testing-strategy.md  workflow.md
docs/development/implementation-history/: agent-prompt.md
docs/maintenance/: monitoring.md  troubleshooting.md  updates.md
docs/source/: conf.py  index.rst
scripts/: profile_parser.py
src/: __init__.py
src/core/: PARSER_IMPLEMENTATION.md  SEARCH_ENGINE_IMPLEMENTATION.md  kv_extraction.py  models.py  parser.py  search.py
src/smart_pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ui/: UI_IMPLEMENTATION.md  app.py  styles.py
src/ui/components/: __init__.py  (+3 more)
src/utils/: UTILS_IMPLEMENTATION.md  docling_compat.py  exceptions.py  logging_config.py  profiling.py
src/verification/: VERIFICATION_IMPLEMENTATION.md  interface.py  renderer.py
tests/: test_classifier_and_kv.py  test_header_classifier.py  test_kv_extraction.py  test_parser_core.py  test_property_performance.py  test_search_engine.py  test_verification.py
workflows/: tests.yml
(+9 files in other folders)
